--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JS Assignment</title>
 </head>
 <body>
-    
+<h1>JavaScript Assignment</h1>
     <a href="https://docs.google.com/document/d/1OqZj985UUr12Gg6AoOSNpSJ3GU531gO2z9OwyKPNbGo/edit?usp=sharing">TASKS 1 & 2</a>
     <script src="./script.js"></script>
 </body>
